# mrs_core_examples

./: .gitignore  .gitman.yml  .gitmodules  README.md  repurpose_package.sh
.ci/: ci_before_install.sh  ci_test_build.sh  install.sh
.github/workflows/: melodic.yml  noetic.yml  ros_build_test.yml
controller_plugin/: README.md  package.xml
controller_plugin/include/: pid.hpp
controller_plugin/src/: example_controller.cpp
controller_plugin/tmux/: session.yml
cpp/: README.md
cpp/controller_plugin/: CMakeLists.txt  README.md  plugins.xml
cpp/controller_plugin/cfg/: example_controller.cfg
cpp/controller_plugin/config/: example_controller.yaml
cpp/controller_plugin/tmux/config/: custom_config.yaml  simulator.yaml
cpp/tracker_plugin/: README.md
cpp/tracker_plugin/cfg/: example_tracker.cfg
cpp/tracker_plugin/tmux/config/: custom_config.yaml  hw_api.yaml  simulator.yaml
cpp/waypoint_flier/: CMakeLists.txt  README.md  nodelets.xml  package.xml
cpp/waypoint_flier/config/: dynparam.cfg  waypoint_flier.yaml
cpp/waypoint_flier/launch/: example_waypoint_flier.launch  waypoint_flier.launch
cpp/waypoint_flier/src/: example_waypoint_flier.cpp  waypoint_flier.cpp
cpp/waypoint_flier/tmux/: session.yml
cpp/waypoint_flier/tmux/config/: custom_config.yaml
cpp/waypoint_flier_simple/: CMakeLists.txt  README.md  nodelets.xml  package.xml
cpp/waypoint_flier_simple/launch/: waypoint_flier_simple.launch
cpp/waypoint_flier_simple/src/: waypoint_flier_simple.cpp
cpp/waypoint_flier_simple/tmux/: session.yml
python/: README.md
python/sweeping_generator/: CMakeLists.txt  README.md  package.xml
python/sweeping_generator/config/: sweeping_generator.yaml
python/sweeping_generator/launch/: sweeping_generator.launch
python/sweeping_generator/scripts/: sweeping_generator.py
python/sweeping_generator/tmux/: session.yml
ros_packages/: example_ros_pluginlib  example_ros_uav  example_ros_uav_simple  example_ros_vision
ros_packages/example_packages/: CMakeLists.txt  package.xml
tmux/passthrough_estimator/: session.yml
tmux/passthrough_estimator/config/: custom_config.yaml  world_config.yaml
tmux/passthrough_estimator/config/rviz/: passthrough.rviz
tmux_scripts/simulation_scripts/one_drone_gps/: session.yml
tmux_scripts/uav_scripts/: f550.sh
tmux_scripts/waypoint_flier/: layout.json  session.yml  start.sh
tracker_plugin/: CMakeLists.txt  README.md  package.xml  plugins.xml
tracker_plugin/config/: example_tracker.yaml
tracker_plugin/src/: example_tracker.cpp
waypoint_flier/: CMakeLists.txt  README.md
waypoint_flier/src/: waypoint_flier.cpp
waypoint_flier/tmux/: session.yml
waypoint_flier/tmux/config/: simulator.yaml
waypoint_flier_simple/: README.md  package.xml
waypoint_flier_simple/tmux/: session.yml
