<?xml version="1.0"?>
<package format="2">

  <name>example_waypoint_flier_simple</name>
  <version>1.0.0</version>
  <description>Example for the Simple Waypoint Flier</description>

  <maintainer email="hertdani@fel.cvut.cz">Daniel Hert</maintainer>
  <author email="hertdani@fel.cvut.cz">Daniel Hert</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
