<?xml version="1.0"?>
<package format="2">
  <name>example_packages</name>
  <version>1.0.0</version>
  <description>This package contains example ROS packages</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>
  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
